# LS2

./: AUTHORS  COPYING  Doxyfile.in  Makefile.am  README  README.git  README.md  autogen.sh  configure.ac  index.html  ls2.pc.in  ls2.spec.in  ls2be.pc.in  params.json
examples/: 2r_walls.txt  inf_walls.txt
m4/: ax_opencl.m4
src/: Makefile.am  avx_mathfun.h  debug  debug.c  generate.py  ls2-diff.c  ls2-h5-image.c  ls2-run.c  progress.c  shooter_main.c  shooter_run.c  sse_mathfun.h  test-em.c  vector_shooter.h
src/algorithm/: aml_algorithm.c  aml_algorithm.h  bilateration_algorithm.c  bilateration_algorithm.h  centroid_algorithm.c  centroid_algorithm.h  clurol_algorithm.c  clurol_algorithm.h  const_algorithm.c  const_algorithm.h  convex_algorithm.c  convex_algorithm.h  eminmax_w2_algorithm.c  eminmax_w2_algorithm.h  eminmax_w4_algorithm.c  eminmax_w4_algorithm.h  geo3_algorithm.c  geo3_algorithm.h  geon_algorithm.c  geon_algorithm.h  icla_algorithm.c  icla_algorithm.h  llsq_algorithm.c  llsq_algorithm.h  lms_algorithm.c  lms_algorithm.h  md_minmax_abs_algorithm.c  md_minmax_abs_algorithm.h  md_minmax_rel_algorithm.c  md_minmax_rel_algorithm.h  min_res1_bf_algorithm.c  min_res1_bf_algorithm.h  min_res2_bf_algorithm.c  min_res2_bf_algorithm.h  minmax_algorithm.c  minmax_algorithm.h  mle_gamma_algorithm.c  mle_gamma_algorithm.h  mle_gauss_algorithm.c  mle_gauss_algorithm.h  (+17 more)
src/backend/: backends.c  be_cairo.c  be_hdf5.c  be_openexr.c  be_tga.c  be_tga.h  colors.c
src/backend/bits/: circle.c  rectangle.c
src/error_model/: ab_nlos_em.c  ab_nlos_em.h  bahillo_em.c  bahillo_em.h  const_em.c  const_em.h  eq_noise_em.c  eq_noise_em.h  erlang_noise_em.c  erlang_noise_em.h  gamma_noise_em.c  gamma_noise_em.h  nd_noise_em.c  nd_noise_em.h  nlosp_em.c  nlosp_em.h  ray_noise_em.c  ray_noise_em.h  rayleigh_em.c  rayleigh_em.h  weibull_em.c  weibull_em.h
src/estimator/: crlb_malaney_algorithm.c  crlb_malaney_algorithm.h  crlb_qi_algorithm.c  crlb_qi_algorithm.h  crlb_so_algorithm.c  crlb_so_algorithm.h  crlb_zhao_algorithm.c  crlb_zhao_algorithm.h  gdop_algorithm.c  gdop_algorithm.h  pdop_algorithm.c  pdop_algorithm.h
src/ls2/: backend.h  ls2.h  options.h  output-variants.h  output.h  progress.h  util.h
src/util/: util_circle.c  util_colors.c  util_crash.c  util_math.c  util_matrix.c  util_median.c  util_misc.c  util_points.c  util_points_opt.c  util_random.c  util_residual.c  util_sort.c  util_statistics.c  util_triangle.c  util_vcircle.c  util_vector.c
tests/: Makefile.am  analyze.r  atlocal.in  rdrand.c  test-algorithm.c  test-convex.c  test-error-model.c  test-minres-bf.c  test-mle-gamma.c  testsuite.at
